--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "deepl-node": "^1.3.1",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
     "mysql": "^2.18.1",
+    "node-libcurl": "^2.3.4",
     "router": "^1.3.7"
   }
 }
