--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "mysql": "^2.18.1",
     "node-libcurl": "^2.3.4",
+    "path": "^0.12.7",
     "router": "^1.3.7"
   }
 }
